--- a/ASYNC/AsyncJS_XHR.html
+++ b/ASYNC/AsyncJS_XHR.html
@@ -71,6 +71,10 @@
                  <footer class="grid-100">
                      <p>Copyright, The Intranet Corporation</p>
                  </footer>
+
+                 <hr>
+                 <button id='showCoffeeCup'>Выпить чашку кофе</button>
+
              </div>
          </div>
      </div>
