--- a/JS puzzles and tasks.html
+++ b/JS puzzles and tasks.html
@@ -266,9 +266,9 @@ console.log(res);</p>
      <button class="showAnswer"></button> (вариант 2, более сложный, вызывать: seven_(plus_(one_()))  )
      <hr />
     
-     <h2>ПРИМЕР 8.    add(num1)(num2)...</h2>
+     <h2>ПРИМЕР 8.    add(num1)(num2)...(num)()</h2>
      <p>
-         Напишите функцию сложения вида add(num1)(num2)..  на ES6
+         Напишите функцию сложения вида add(num1)(num2)..(num)()  на ES6
          Примечание: Количество слагаемых не ограничено
      </p>
 
